update notes